Revision history for Graphics-Primitive

0.17
  - Useless whitespace changes
  - POD typos

0.16
  - Opps, I forgot. :(

0.15
  - Add prepared flag to components.  Attributes that affect rendering have
    been modified to set prepared to 0 via a trigger.  Any new attributes
    added henceforth should do the same.
  - Containers (being Components) also have a prepared flag, but it is set
    to true by the layout manager, not by the container itself.  Also, a
    container is not prepared unless all of it's child components are
    prepared.  See Layout::Manager for more details.
  - TextBox: Fix bug when prepared & packed with text attribute set
  - POD


0.14
  - TextBox: handle text layout with Text::Flow
  - Component: coercion of Insets from ArrayRef and Num 
  - Add pop_component to Container for removing the last component.
  - POD updates
  - Component: explicitly return from outside_width and outside_height
  - Component: if minimum width or height are set already, don't change them
    in prepare
  - Font: add derive

0.13
  - Reorganize prepare/pack/draw API to be handled by the Driver
  - Add _resize and _finish_page to Driver API
  - Component: Add page attribute
  - Driver: Don't check class of incoming component before asking if it has
    components and treating it like a container.

0.12
  - Path: Add curve_to and rel_curve_to

0.11
  - Small optimizations
  - Driver: add reset
  - Textbox: Add angle
  - Use Forest rather than Tree::Simple per stevan's request

0.10
  - Path: add rectangle
  - New feature & hint: Add "preserve" to Operation.  Setting this causes
    the canvas to NOT clear the current path on a do().  This operation can
    then be used as a hint to the driver to not create a new path, but to
    reuse the old one.

0.09
  - Path: add arc, close_path, get_path
  - Path: rename get_primitive_at to get_primitive
  - Path: rename count_primitives to primitive_count
  - Path: clone points rather than using them, they tend to change